Projet GL/Projet_GL/src/test/deca/context/valid/increment6/class-null.deca
// Comparaison class with null

// Historique : cree le 20/01/2023

class A{
    int x;
}

{
    A a = new A();
    if(a == null){
        print("a nul");
    }
    else{
        print("a pas nul");
    }
}